# screenpeek

./: .gitignore  Cargo.toml  HOW-TO-RUN.md  LICENSE  README.md  START-HERE.md  install.bat  start.bat  stop.bat  uninstall.bat
crates/capture/: Cargo.toml
crates/capture/src/: desktop.rs  duper.rs  frame.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  consent.rs  crypto.rs  device.rs  error.rs  lib.rs  token.rs
crates/encoder/: Cargo.toml
crates/encoder/src/: frame.rs  hardware.rs  jpeg.rs  lib.rs  software.rs
crates/server/: Cargo.toml
crates/server/src/: http.rs  lib.rs  signal.rs  tls.rs  viewer.rs
crates/service/: Cargo.toml
crates/service/src/: agent.rs  main.rs  win.rs
crates/stream/: Cargo.toml
crates/stream/src/: lib.rs  peer.rs  pipeline.rs  session.rs  turn.rs
viewer/: index.html
