[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/capture",
    "crates/encoder",
    "crates/stream",
    "crates/server",
    "crates/service",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
