[package]
name = "ss-capture"
version.workspace = true
edition.workspace = true

[dependencies]
ss-core = { path = "../core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_StationsAndDesktops",
    "Win32_Security",
] }
