[package]
name = "ss-server"
version.workspace = true
edition.workspace = true

[dependencies]
ss-core = { path = "../core" }
ss-stream = { path = "../stream" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
rustls = "0.23"
tokio-rustls = "0.26"
tokio-tungstenite = "0.24"
futures-util = "0.3"
rcgen = "0.13"
hostname = "0.4"
uuid = { workspace = true }
