[package]
name = "ss-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ss-service"
path = "src/main.rs"

[dependencies]
ss-core = { path = "../core" }
ss-capture = { path = "../capture" }
ss-encoder = { path = "../encoder" }
ss-stream = { path = "../stream" }
ss-server = { path = "../server" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
windows-service = "0.7"
tokio-tungstenite = "0.24"
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_RemoteDesktop",
    "Win32_System_SystemServices",
    "Win32_System_JobObjects",
] }
