[package]
name = "ss-stream"
version.workspace = true
edition.workspace = true

[dependencies]
ss-core = { path = "../core" }
ss-capture = { path = "../capture" }
ss-encoder = { path = "../encoder" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
